<resources>
    <string name="app_name">在意天气</string>

    <string name="nav_current_city">当前城市</string>
    <string name="nav_chosen_city">城市选择</string>
    <string name="nav_setting">通用设置</string>
    <string name="nav_about">关于作者</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="double_click_exit">再按一次退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
