<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_city"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/nav_current_city"/>
        <item
            android:id="@+id/nav_chosen_city"
            android:icon="@drawable/ic_city"
            android:title="@string/nav_chosen_city"/>
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/nav_setting"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/nav_about"/>
        </menu>
    </item>

</menu>
